--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uiw/react-markdown-preview": "^5.1.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "init": "^0.1.2",
@@ -18,7 +19,6 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-markdown": "^10.1.0",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.6.1",
     "shadcn-ui": "^0.9.5",
